# cubeera-desktop-client

./: .gitignore  CMakeLists.txt
cmake/CubeEra/: CMakeLists.txt
src/: main.cpp
